# planning-data-analysis

./: .gitignore  .pre-commit-config.yaml  CIL_schedule_documents - Sheet1.csv  Makefile  README.md  cil_dataset.csv  cil_processing.ipynb  cil_processing_script.py  geo_spatial_analysis.ipynb  local_plan_data_collection.ipynb  pyproject.toml
CIL/: cil_processing.ipynb
CIL/output/: ifs_dataset.csv
Scripts/: cil_processing.py  cluster_analysis_invalid_reasons.py  eda_report.py  local_plan_data_collection.py  pdf_web_table_scrape.ipynb
analysis_reports/: air_quality_analysis_report.docx  coal_authority_analysis_report.docx  delisted_analysis_report_(De-designated_sites.shp).docx  greater_london_archaeology_analysis_report.docx  green_space_analysis_report.docx  historic_england_analysis_report.docx  listed_buildings_analysis_report.docx  national_heritage_analysis_report.docx  postcodes_analysis_report.docx  radon_dataset_analysis_report.docx  rivers_analysis_report.docx  roads_analysis_report.docx  uprn_analysis_report.docx  usrn_analysis_report.docx
cil_infrastructure_funding/: cil_dataset.csv  cil_processing.ipynb  cil_processing_script.py  ifs_dataset.csv
compare_housing_delivery_test_data/: homes-delivered.csv  homes-required.csv  housing-delivery-test.csv
invalid_application_type/: Grouped_Invalid_Reason_Details.csv  Planning Application Analysis.docx  cluster_analyse_script.ipynb  invalid-applications-sample-reasons.xlsx - invalid-application-sample-reas.csv  ~$anning Application Analysis.docx
local_plan_data_collection/: local_plan_data_collection.ipynb
(+30 files in other folders)
