[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planning-data-analysis"
version = "0.1.0"
description = "Planning data analysis tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0,<9.0",
    "pdfplumber",
    "pandas",
    "requests",
    "beautifulsoup4",
]

[project.scripts]
pda = "planning_data_analysis.cli:cli"


[tool.setuptools.packages]
find = { where = ["src"], include = ["planning_data_analysis*"] }
