[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planning-data-analysis"
version = "0.1.0"
authors = [
  { name="MHCLG", email="" },
]
description = "Tools for analyzing planning data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pdfplumber",
    "pandas",
    "requests",
    "beautifulsoup4",
    "click",
    "fuzzywuzzy",
    "playwright",
    "geopandas",
    "python-docx",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "folium",
    "python-slugify",
    "pyppeteer",
]

[project.urls]
"Homepage" = "https://github.com/mhclg/planning-data-analysis"

[project.scripts]
planning-data = "planning_data_analysis.cli:cli"
